--- a/src/Field.mdx
+++ b/src/Field.mdx
@@ -3,28 +3,32 @@ name: <Field />
 menu: Components
 ---
 
-import { Playground, Props } from 'docz';
-import Field from './Field.js';
+import { Playground, Props } from 'docz'
+import { Form, Field } from './index.js'
 
-# Button
+# Field
 
 <Props of={Field} />
 
 ## Basic usage
 
 <Playground>
-  <Field>The Label</Field>
+  <Form onSubmit={() => {}}>
+    <Field>The Label</Field>
+  </Form>
 </Playground>
 
 ## Field Types
 
 <Playground>
-  <Field>Name</Field>
-  <Field type="email">Email</Field>
-  <Field type="password">Password</Field>
-  <Field type="tags">Tags</Field>
-  <Field type="number">Number</Field>
-  <Field required type="select" options={['one', 'two']}>
-    Type
-  </Field>
+  <Form onSubmit={() => {}}>
+    <Field>Name</Field>
+    <Field type="email">Email</Field>
+    <Field type="password">Password</Field>
+    <Field type="tags">Tags</Field>
+    <Field type="number">Number</Field>
+    <Field required type="select" options={['one', 'two']}>
+      Type
+    </Field>
+  </Form>
 </Playground>
