--- a/src/fields/styleguide.mdx
+++ b/src/fields/styleguide.mdx
@@ -3,8 +3,8 @@ name: Home
 route: /
 ---
 
-import { Playground, Props } from 'docz';
-import { Form, Field } from './index.js';
+import { Playground, Props } from 'docz'
+import { Form, Field } from '../index.js'
 
 # Form
 
@@ -20,5 +20,27 @@ import { Form, Field } from './index.js';
     <Field required type="select" options={['hi']}>
       Type
     </Field>
+  </Form>
+</Playground>
+
+## Slightly more advanced form
+
+<Playground>
+  <Form onSubmit={() => {}}>
+    <Field>Name</Field>
+    <Field type="email">Email</Field>
+    <Field type="password">Password</Field>
+    <Field type="tags">Tags</Field>
+    <Field type="number">Number</Field>
+    <Field
+      required
+      type="select"
+      options={['Scott', 'Courtney', 'Landon', 'Brooklyn']}
+    >
+      Type
+    </Field>
+    <Field type="textarea">Text Area</Field>
+    <Field type="markdown">Markdown</Field>
+    <Field type="toggle">Markdown</Field>
   </Form>
 </Playground>
